# arqui-puntos

./: .gitignore
app/: Dockerfile  pyproject.toml  server.py
deployment/0-vpc/: vpc.tf
deployment/1-ecr/: ecr.tf  load_image.sh
deployment/2-dynamo/: dynamo.tf
deployment/3-mcp/: mcp.tf
