[project]
name = "mcp-arquipuntos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.39.9",
    "langchain-mcp-adapters>=0.1.9",
    "langgraph>=0.5.3",
    "mcp[cli]>=1.12.0",
    "starlette>=0.47.2",
    "uvicorn>=0.35.0",
]
